--- a/login.html
+++ b/login.html
@@ -49,8 +49,8 @@
   <!-- *****************************************Librería de controlador principal***************************************** -->
   <script src="js/controller.js"></script>
   <!-- *****************************************Alertas***************************************** -->
-  <link rel="stylesheet" type="text/css" href="https://ptreesys.mx/sharedfiles/src/sweetalert.css">
-  <script src="https://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://ptreesys.mx/sharedfiles/src/sweetalert.css">
+	<script src="http://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
   <!-- Pattern -->
   <script src="js/ng-pattern-restrict.js"></script>
 	<!-- *****************************************Librería de lodash***************************************** -->
