--- a/creditcard-address.html
+++ b/creditcard-address.html
@@ -93,8 +93,8 @@
 			<nav class="navbar navbar-expand-md navbar-light bg-light ">
 				<div class="container-fluid">
 					<!--logo -->
-
-					<a class="navbar-brand" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
+					<div class="parent"><a class="navbar-brand container2" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" width="80" height="80" /></a> </div>
+					<!--<a class="navbar-brand" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>-->
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
