--- a/order-details.html
+++ b/order-details.html
@@ -98,7 +98,7 @@
 		<div class="container-fluid">
 			<!--logo -->
 
-			<a class="navbar-brand" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
+			<div class="parent"><a class="navbar-brand container2" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" width="80" height="80" /></a> </div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -221,7 +221,7 @@
 								<div class="card">
 									<div class="table-responsive">
 										<table class="table">
-											<thead>
+											<thead class="thead-light">
 
 												<th colspan="2">Product</th>
 												<th >Quantity</th>
