mejoras de diseño tablas

--- a/order-details.html
+++ b/order-details.html
@@ -75,8 +75,8 @@
 								<i class="fas fa-user" aria-hidden="true"></i> {{ "Hello: " + UserName }}
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Close sesion</a>
 								<a  class="dropdown-item" href="your-order.html" style="color:#5A6268;">Your Orders</a>
+								<a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Close sesion</a>
 							</div>
 						</li>
 
@@ -146,7 +146,7 @@
 
 		</div>
 		<br>
-		<div>	<h6>Ordered on September 15,2015 <small><strong>#KPBFV556780</strong>	</small></h6>
+		<div>	<h6>Ordered on September 15, 2015 <small><strong>#KPBFV556780</strong>	</small></h6>
 		</div>
 <br>
 
