--- a/details-product.html
+++ b/details-product.html
@@ -75,7 +75,8 @@
                   <a class=" dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-user" aria-hidden="true"></i> {{ "Hello: " + UserName }}
                   </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a  class="dropdown-item" href="your-order.html" style="color:#5A6268;">Your Orders</a>
                     <a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Logout</a>
                   </div>
                 </li>
@@ -98,7 +99,7 @@
 				<div class="container-fluid">
 					<!--logo -->
 
-					<a class="navbar-brand" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
+					<div class="parent"><a class="navbar-brand container2" href="index.html"><img ng-src="{{MasterInfo[0].HOMELOGO}}" width="80" height="80" /></a> </div>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
