--- a/products.html
+++ b/products.html
@@ -73,8 +73,9 @@
                   <a class=" dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-user" aria-hidden="true"></i> {{ "Hello: " + UserName }}
                   </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Logout</a>
+                  <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                  	<a  class="dropdown-item" href="your-order.html" style="color:#5A6268;">Your Orders</a>
+                  	<a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Logout</a>
                   </div>
                 </li>
 
@@ -165,11 +166,6 @@
 					<div class="row">
 						<div class=" col-xs-12 col-sm-12 col-md-3 col-lg-3">
 							<div class="card card-body bg-light mb-4">
-
-
-
-
-
 								<div class="card-header bg-green text-white text-uppercase">Categories</div>
 								<ul class="list-group list-group-flush ">
 									<li ng-click="FindSubcategories(ProductCardsItem.ID, ProductCardsItem.HASCHILD, ProductCardsItem.NAME);" class="list-group-item" ng-repeat="ProductCardsItem in ProductCardsMainMenu"><a href="#" class=" active">{{ProductCardsItem.NAME}}</a></li>
@@ -232,7 +228,8 @@
 									</ul>
 								</div>
 							</div>
-							<table ng-show="ShowDetail && ShowTable" class="table table-striped">
+							<div class="card">
+								<table ng-show="ShowDetail && ShowTable" class="table table-striped">
 							
 								<thead class="thead-light">
 									<tr>
@@ -259,6 +256,7 @@
 									</tr>
 								</tbody>
 							</table>
+							</div>
 						</div>
 
 					</div>
