--- a/your-order.html
+++ b/your-order.html
@@ -75,7 +75,8 @@
 								<i class="fas fa-user" aria-hidden="true"></i> {{ "Hello: " + UserName }}
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Close sesion</a>
+								<a  class="dropdown-item" href="your-order.html" style="color:#5A6268;">Your Orders</a>
+								<a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Logout</a>
 							</div>
 						</li>
 
@@ -168,11 +169,10 @@
 					</div>
 				</div>
 				<br>
-				<div>
+				<div class="card">
 					<div class="table-responsive">
 						<table class="table">
-							<thead class="thead-light">
-
+							<thead class="card-header">
 								<th >Ship To</th>
 								<th class="cart_item_tprice text-center">Order Date</th>
 								<th class="text-center">Total</th>
