--- a/products.html
+++ b/products.html
@@ -137,7 +137,7 @@
 
 		<main >
 			<section class="wrap" >
-				<br>
+
 				<div class="container">
 					<div class="">
 						<h3>Products</h3>
@@ -155,7 +155,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<div class="card card-block bg-faded" style="padding-left:15px; padding-top:10px; background-color:#e9ecef;">
+							<div class="card card-block bg-faded" style="padding-left:15px; padding-top:10px; padding-bottom:-60px;background-color:#e9ecef;">
 								<div ng-bind-html="html"></div>
 							</div>
 						</div>
@@ -230,7 +230,7 @@
 							</div>
 							<div class="card">
 								<table ng-show="ShowDetail && ShowTable" class="table table-striped">
-							
+
 								<thead class="thead-light">
 									<tr>
 										<th scope="col">Products</th>
