--- a/order-details.html
+++ b/order-details.html
@@ -76,7 +76,7 @@
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a  class="dropdown-item" href="your-order.html" style="color:#5A6268;">Your Orders</a>
-								<a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Close sesion</a>
+								<a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Logout</a>
 							</div>
 						</li>
 
