--- a/shipping-address2.html
+++ b/shipping-address2.html
@@ -144,7 +144,7 @@
 	<div class="container wrap heading-principal">
 
 		<div class="heading heading-principal">
-			<h3>Review Your Order & Complete Checkout</h3>
+			<h4>Review Your Order & Complete Checkout</h4>
 
 		</div>
 
@@ -153,17 +153,17 @@
 			<div class="col">
 
 
-				<div class="" style=" width:100%; margin-top:15px;">
-					<div class="card">
+				<div class="" style=" width:100%; margin-top:15px; ">
+					<div class="card sombreado-card">
 						<div class="card-header">
 							<i class="fas fa-shopping-cart  fa-lg" style="color:#006837;"></i><strong> Review your order</strong>
 						</div>
-						<div class="card-body">
+						<div class="card-body ">
 							<div class="row">
 								<div class="col-md-8">
 
 
-									<div class="card">
+									<div class="card ">
 										<div class="table-responsive">
 											<table class="table">
 												<thead class="card-header">
@@ -192,7 +192,7 @@
 	</div>
 							</div>
 							<div class="col">
-							<div class="card">
+							<div class="card block-prueba">
 								<div class="subtotal2 heading-principalcard">
 									<div class="card-header">
 										<strong>Summary</strong>
