--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       <a ng-show="MasterInfo[0].Products" class="nav-link " href="products.html">PRODUCTS</a>
                     </li>
                     <li class="nav-item">
-                      <a ng-show="MasterInfo[0].Apps" class="nav-link" href="#">APPLICATIONS</a>
+                      <a ng-show="MasterInfo[0].Apps" class="nav-link" href="applications.html">APPLICATIONS</a>
                     </li>
                   </ul>
                 </form>
