--- a/order-details.html
+++ b/order-details.html
@@ -15,10 +15,10 @@
 	<!--Librería para validar números -->
 	<script src="js/autoNumeric.js"></script>
 
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
-	<script src="js/ui-bootstrap-tpls.js"></script>
+	<script src="js/angular.js"></script>
+	<script src="js/angular-animate.js"></script>
+	<script src="js/angular-sanitize.js"></script>
+  <script src="js/ui-bootstrap-tpls.js"></script>
 
 	<!--Boostrap JS Para animaciones-->
 	<script src="js/bootstrap.min.js"></script>
@@ -49,8 +49,8 @@
 	<!-- *****************************************Librería de boostrap toogle ***************************************** -->
 	<script src="js/angular-bootstrap-toggle.min.js"></script>
 	<!-- *****************************************Alertas***************************************** -->
-	<link rel="stylesheet" type="text/css" href="http://ptreesys.mx/sharedfiles/src/sweetalert.css">
-	<script src="http://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
+	<script src="js/sweetalert.min.js"></script>
 	<!-- Pattern -->
 	<script src="js/ng-pattern-restrict.js"></script>
 	<!-- *****************************************Librería de lodash***************************************** -->
