--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
-  <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-3.0.3.js"></script>
+	<script src="js/angular.js"></script>
+	<script src="js/angular-animate.js"></script>
+	<script src="js/angular-sanitize.js"></script>
+  <script src="js/ui-bootstrap-tpls.js"></script>
   <!--Boostrap JQuery -->
   <script src="js/jquery.js"></script>
 
@@ -49,8 +49,8 @@
   <!-- *****************************************Librería de controlador principal***************************************** -->
   <script src="js/controller.js"></script>
   <!-- *****************************************Alertas***************************************** -->
-	<link rel="stylesheet" type="text/css" href="http://ptreesys.mx/sharedfiles/src/sweetalert.css">
-	<script src="http://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
+	<script src="js/sweetalert.min.js"></script>
   <!-- Pattern -->
   <script src="js/ng-pattern-restrict.js"></script>
 	<!-- *****************************************Librería de lodash***************************************** -->
